--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -64,6 +64,7 @@ th:src="@{/webjars/jquery/2.1.3/jquery.min.js}"></script>
    </div>
    <div class="row">&nbsp;</div>
    <div class="row">
+    <input type="number" name="max" id="max" value="0"/> "0" -> no limitar
     <button type="submit" class="btn btn-default center-block" >Buscar</button>
    </div>
   </form>
